# reel

./: Makefile  docker-compose.yml  pyproject.toml
json_schemas/: event.json  filter.json
mongo_init/: setup.js
reel/: main.py
