[tool.poetry]
name = "reel"
version = "0.1.0"
description = ""
authors = ["Tom Talbot <tst1333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
fastapi = "^0.100.0"
pymongo = "^4.4.1"
uvicorn = "^0.23.1"
jsonschema = "^4.18.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
